# Compliance-Guardian-AI

./: .env.deployment  .env.example  .gitignore  BEDROCK_SETUP.md  EMOJI_REMOVAL_SUMMARY.md  LICENSE  QUICK_START.md  README.md  check_status.py  configure_aws.py  demo.py  demo_auto.py  deploy_lambda.py  deploy_lambda_quick.py  deploy_windows.py  enable_bedrock.py  fix_bedrock_permissions.py  lambda_handler.py  pyproject.toml  redeploy_api.py  remove_emojis.py  requirements-lambda.txt  requirements.txt  setup_infrastructure.py  switch_to_nova.py  test_bedrock.py  test_complete_workflow.py  test_e2e_workflow.py  test_scan_endpoint.py  update_handler.py  update_lambda_model.py
diagrams/: architecture.txt
docs/: ABOUT_PROJECT.md  API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  FRAMEWORKS_REFERENCE.md  USER_GUIDE.md
examples/: amazon_q_usage.py  api_usage.py  automated_remediation.py  basic_scan.py  generate_reports.py
infrastructure/cloudformation/: compliance-guardian.yaml
infrastructure/terraform/: main.tf
notebooks/: demo_compliance_guardian.ipynb
scripts/: deploy.sh  setup.bat  setup.sh  setup_aws_resources.sh
src/agents/: __init__.py  audit_agent.py  base_agent.py  compliance_agent.py  explainability_agent.py  orchestrator_agent.py  remediation_agent.py
src/amazon_q/: README.md  __init__.py  client.py
src/api/: main.py  simple_handler.py
src/api/routes/: __init__.py  agents.py  health.py  remediation.py  reports.py  scans.py  workflows.py
src/core/: __init__.py  agent_gateway.py  agent_identity.py  agent_memory.py  agent_runtime.py  bedrock_client.py  observability.py
src/integrations/: __init__.py  aws_connector.py  database_connector.py  github_connector.py  gitlab_connector.py  regulatory_portal.py
src/reasoning/: __init__.py  decision_maker.py  policy_interpreter.py  risk_assessor.py
src/remediations/: __init__.py  consent_manager.py  encryption_enforcer.py  pii_masker.py  policy_injector.py
src/reporting/: __init__.py  audit_report.py  compliance_dashboard.py  executive_summary.py  regulator_report.py
src/scanners/: __init__.py  code_scanner.py  data_flow_scanner.py  gdpr_scanner.py  hipaa_scanner.py  pci_scanner.py
src/utils/: __init__.py  config.py  encryption.py  logger.py  metrics.py  validators.py
tests/: test_amazon_q_client.py
tests/integration/: test_api_integration.py
tests/unit/: __init__.py  test_bedrock_client.py  test_config.py  test_encryption.py  test_utils_extended.py  test_validators.py
